# ros2_hmi_node

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hmi_node/lib/hmi_node/: hmi_node  hmi_node_client  hmi_node_server
install/hmi_node/share/ament_index/resource_index/package_run_dependencies/: hmi_node
install/hmi_node/share/ament_index/resource_index/parent_prefix_path/: hmi_node
install/hmi_node/share/hmi_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hmi_node/share/hmi_node/cmake/: hmi_nodeConfig-version.cmake  hmi_nodeConfig.cmake
install/hmi_node/share/hmi_node/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
install/hmi_node/share/hmi_node/launch/: hmi_node_launch.launch.py
log/: latest_build
param/: config_params.yaml  roomID_targetPosition.yaml  stub_file.yaml
src/build-hmi_node-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  hmi_node.cbp  hmi_node_client  hmi_node_server
src/build-hmi_node-Desktop-Debug/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: hmi_node
src/build-hmi_node-Desktop-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/build-hmi_node-Desktop-Release/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  hmi_node.cbp  hmi_node_server  qtcsettings.cmake
src/build-hmi_node-Desktop-Release/ament_cmake_core/: hmi_nodeConfig.cmake
src/build-hmi_node-Desktop-Release/ament_cmake_core/stamps/: package.xml.stamp
src/build-hmi_node-Desktop-Release/ament_cmake_environment_hooks/: local_setup.sh
src/build-hmi_node-Desktop-Release/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/hmi_node/: CMakeLists.txt  package.xml
src/hmi_node/launch/: hmi_node_launch.launch.py
src/hmi_node/src/: EthernetPrimitives.cpp  JsonMessages.h  client.cpp  client.h  client.h.autosave  communication_primitives.hpp  ethernet_primitives.hpp  jsonprimitives.cpp  jsonprimitives.h  main.cpp  server.cpp  server.h  statusinformation.cpp  statusinformation.h
